--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
+    "nbformat>=4.2.0",
+    "openpyxl>=3.1.5",
     "pandas>=3.0.0",
+    "plotly>=6.5.2",
+    "seaborn>=0.13.2",
 ]
