--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pandas>=3.0.0",
     "plotly>=6.5.2",
     "protobuf<5",
+    "pytest>=9.0.2",
     "seaborn>=0.13.2",
     "setuptools>=70,<71",
     "xgboost>=3.2.0",
